[project]
name = "ActiveProbing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LiDing", email = "72634327+linkedlist771@users.noreply.github.com"},
]
dependencies = [
    "setuptools>=70.2.0",
    "loguru>=0.7.2",
    "python-nmap>=0.7.1",
    "black>=24.4.2",
    "pydantic>=2.8.2",
    "pdm>=2.16.1",
    "tqdm>=4.66.4",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
