[project]
name = "ActiveProbing"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LiDing", email = "72634327+linkedlist771@users.noreply.github.com"},
]
dependencies = [
    "setuptools>=70.2.0",
    "loguru>=0.7.2",
    "python-nmap>=0.7.1",
    "black>=24.4.2",
    "pydantic>=2.8.2",
    "pdm>=2.16.1",
    "tqdm>=4.66.4",
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "requests>=2.32.3",
    "folium>=0.17.0",
    "notebook>=7.2.1",
    "pandas>=2.2.2",
    "paramiko>=3.4.0",
    "mysql>=0.0.3",
    "pymongo>=4.8.0",
    "redis>=5.0.7",
    "pysftp>=0.2.9",
    "ldap3>=2.9.1",
    "pyodbc>=5.1.0",
    "elasticsearch>=8.14.0",
    "pika>=1.3.2",
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.1",
    "confluent-kafka>=2.5.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
